# pygalaga

./: LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
galaga/: game.py  utils.py
pygalaga/: config.py  game.py  utils.py
pygalaga/components/: __init__.py  aliens.py  bullet.py  ship.py  sounds.py
