[tool.poetry]
name = "pygalaga"
version = "1.0.5"
description = "A simple Galaga clone using Pygame"
authors = ["Abhishek Prakash <abhishek.g.prakash@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pygalaga"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"
pillow = "^10.4.0"
[tool.poetry.scripts]
pygalaga = "pygalaga.game:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
